--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1495,10 +1495,29 @@ endif
 
 source "lib/Kconfig"
 
-config HWCONF_MANAGER
-       bool "Hardware configuration and monitor information"
-       default y
-       depends on CJSON
-       help
-        It provides all kinds of components configuration information and
-        monitor values.
+menu "Xiaomi configuration options"
+
+config MACH_XIAOMI
+        bool "Xiaomi device"
+        depends on ARCH_QCOM
+        help
+          Support for Xiaomi products
+
+config MACH_XIAOMI_SM8150
+        bool "Xiaomi SM8150"
+        depends on ARCH_SM8150
+        select MACH_XIAOMI
+        help
+          Support for SM8150-based Xiaomi variants
+
+menu "Xiaomi board selection"
+
+config MACH_XIAOMI_ANDROMEDA
+        bool "andromeda board"
+        select MACH_XIAOMI_SM8150
+        help
+          Support for Xiaomi MI MIX 3 5G
+
+endmenu
+
+endmenu
