ARM64: dts: disable second gpu thermal zone
Fixed the following error during boot.
[    0.356123] virt zone: sensor[gpuss-1-usr] read error:-22
[    0.356125] thermal thermal_zone32: failed to read out thermal zone (-22)

Signed-off-by: Hadid Garcia <hadid.garcia1@gmail.com>

--- a/arch/arm64/boot/dts/qcom/xiaomi-sm8150-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi-sm8150-common.dtsi
@@ -476,6 +476,16 @@
 	tzone-names = "gpuss-0-usr";
 };
 
+&thermal_zones {
+	gpuss-1-usr {
+		status = "disabled";
+	};
+};
+
+&msm_gpu {
+	tzone-names = "gpuss-0-usr";
+};
+
 &usb2_phy1 {
         status = "ok";
 };
