defconfig: use zstd as compression backend + z3fold as zram backend
Signed-off-by: Hadid Garcia <hadid.garcia1@gmail.com>

--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -66,10 +66,11 @@ CONFIG_PRIME_CPU_MASK=128
 CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
 CONFIG_CMA=y
-CONFIG_ZSMALLOC=y
+CONFIG_Z3FOLD=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=256
 CONFIG_SECCOMP=y
 CONFIG_OKL4_GUEST=y
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
@@ -713,6 +714,8 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
+CONFIG_CRYPTO_ZSTD=y
+CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
