--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -589,6 +589,7 @@ CONFIG_FRAME_VECTOR=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -4289,8 +4290,8 @@ CONFIG_STAGING=y
 #
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+
 CONFIG_ION=y
 # CONFIG_ION_SYSTEM_HEAP is not set
 # CONFIG_ION_CARVEOUT_HEAP is not set
