--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -17,7 +17,7 @@ CONFIG_LOG_BUF_SHIFT=21
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_CGROUPS=y
-CONFIG_MEMCG=y
+# CONFIG_MEMCG is not set
 CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
