--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -70,6 +70,7 @@ CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_SECCOMP=y
 CONFIG_OKL4_GUEST=y
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
