dts: qcom: properly add board platform selection
Signed-off-by: Hadid Garcia <hadid.garcia1@gmail.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -1,6 +1,7 @@
 ifeq ($(CONFIG_MACH_XIAOMI_SM8150),y)
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
-dtbo-$(CONFIG_ARCH_SM8150) += \
+ifeq ($(CONFIG_MACH_XIAOMI_ANDROMEDA),y)
+dtbo-$(CONFIG_MACH_XIAOMI_ANDROMEDA) += \
 		andromeda-sm8150-overlay.dtbo \
 		andromeda-sm8150-p1-overlay.dtbo \
 		andromeda-sm8150-p1_1-overlay.dtbo \
@@ -18,6 +19,7 @@ andromeda-sm8150-p2_1-overlay.dtbo-base := sm8150.dtb sm8150-v2.dtb sm8150p.dtb 
 andromeda-sm8150-p2_2-overlay.dtbo-base := sm8150.dtb sm8150-v2.dtb sm8150p.dtb sm8150p-v2.dtb
 andromeda-sm8150-p2_21-overlay.dtbo-base := sm8150.dtb sm8150-v2.dtb sm8150p.dtb sm8150p-v2.dtb
 andromeda-sm8150-p2_22-overlay.dtbo-base := sm8150.dtb sm8150-v2.dtb sm8150p.dtb sm8150p-v2.dtb
+endif
 endif
 else
 
