gitignore: adding more exceptions
for personal usage

Signed-off-by: Hadid Garcia <hadid.garcia1@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,9 @@ all.config
 # fetched Android config fragments
 kernel/configs/android-*.cfg
 
-# Toolchain folders
+# Compiler-related files and folders
 toolchain/
 out/
+mkdtboimg.py
+kernel.log
+dtbo.img
