--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,10 @@ all.config
 
 # fetched Android config fragments
 kernel/configs/android-*.cfg
+
+# Compiler-related files and folders
+toolchain/
+out/
+mkdtboimg.py
+kernel.log
+dtbo.img
