--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -107,6 +107,7 @@ CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
+CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_ANDROMEDA=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
