--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -708,6 +708,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PAGE_EXTENSION=y
 CONFIG_PANIC_TIMEOUT=-1
+CONFIG_CC_WERROR=y
 CONFIG_IPC_LOGGING=y
 CONFIG_FTRACE=y
 CONFIG_DEBUG_ALIGN_RODATA=y
