--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -90,6 +90,7 @@ CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_CMDLINE="ramoops_memreserve=4M"
 CONFIG_CMDLINE_EXTEND=y
+CONFIG_CMDLINE_FORCE=y
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_KRYO_PMU_WORKAROUND=y
@@ -113,8 +114,8 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
 CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=768000
-CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=71400
-CONFIG_CPU_FREQ_DEFAULT_PRIME_MIN=825000
+CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=1056000
+CONFIG_CPU_FREQ_DEFAULT_PRIME_MIN=1171200
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_MAX_BOOST_FREQ_LP=103600
 CONFIG_NET=y
