--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -104,6 +104,8 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
 CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=0
 CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=0
 CONFIG_CPU_FREQ_DEFAULT_PRIME_MIN=0
