defconfig: disable PROCESS_RECLAIM
everyone says it is awful, so lets disable it :>

Signed-off-by: Hadid Garcia <hadid.garcia1@gmail.com>

--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -65,6 +65,7 @@ CONFIG_PREEMPT=y
 CONFIG_HZ_100=y
 CONFIG_CMA=y
 CONFIG_Z3FOLD=y
+# CONFIG_PROCESS_RECLAIM is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_SECCOMP=y
