defconfig: remove debugging stuff
Signed-off-by: Hadid Garcia <hadid.garcia1@gmail.com>

--- a/arch/arm64/configs/andromeda_defconfig
+++ b/arch/arm64/configs/andromeda_defconfig
@@ -101,7 +101,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_MENU=y
-CONFIG_ARM_CPUIDLE=y
+# CONFIG_ARM_CPUIDLE is not set
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
@@ -328,8 +328,8 @@ CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOE=y
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
+# CONFIG_PPPOLAC is not set
+# CONFIG_PPPOPNS is not set
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_USBNET=y
@@ -393,7 +393,7 @@ CONFIG_QPNP_QNOVO5=y
 CONFIG_SMB1390_CHARGE_PUMP=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
-CONFIG_THERMAL_GOV_USER_SPACE=y
+# CONFIG_THERMAL_GOV_USER_SPACE is not set
 CONFIG_THERMAL_GOV_LOW_LIMITS=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
@@ -479,11 +479,11 @@ CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_MSM=y
 CONFIG_USB_ISP1760=y
 CONFIG_USB_ISP1760_HOST_ROLE=y
-CONFIG_USB_EHSET_TEST_FIXTURE=y
+# ONFIG_USB_EHSET_TEST_FIXTURE is not set
 CONFIG_USB_LINK_LAYER_TEST=y
 CONFIG_USB_REDRIVER_NB7VPQ904M=y
 CONFIG_NOP_USB_XCEIV=y
-CONFIG_USB_QCOM_EMU_PHY=y
+# CONFIG_USB_QCOM_EMU_PHY is not set
 CONFIG_USB_MSM_SSPHY_QMP=y
 CONFIG_MSM_HSUSB_PHY=y
 CONFIG_DUAL_ROLE_USB_INTF=y
@@ -568,7 +568,7 @@ CONFIG_RPMSG_CHAR=y
 CONFIG_RPMSG_QCOM_GLINK_SMEM=y
 CONFIG_RPMSG_QCOM_GLINK_SPSS=y
 CONFIG_RPMSG_QCOM_GLINK_SPI=y
-CONFIG_QCOM_CPUSS_DUMP=y
+# CONFIG_QCOM_CPUSS_DUMP is not set
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_SM8150_LLCC=y
@@ -594,7 +594,7 @@ CONFIG_SSR_SYSMON_NOTIF_TIMEOUT=20000
 CONFIG_SSR_SUBSYS_NOTIF_TIMEOUT=20000
 CONFIG_PANIC_ON_SSR_NOTIF_TIMEOUT=y
 CONFIG_MSM_BOOT_STATS=y
-CONFIG_QCOM_DCC_V2=y
+# CONFIG_QCOM_DCC_V2 is not set
 CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
@@ -635,7 +635,7 @@ CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=2597
 CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=2929
-CONFIG_EXTCON_USB_GPIO=y
+# CONFIG_EXTCON_USB_GPIO is not set
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
 CONFIG_US_PROXIMITY=y
@@ -696,7 +696,7 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_PAGE_EXTENSION=y
 CONFIG_PANIC_TIMEOUT=-1
 CONFIG_CC_WERROR=y
-CONFIG_IPC_LOGGING=y
+# CONFIG_IPC_LOGGING is not set
 CONFIG_FTRACE=y
 CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_CORESIGHT=y
